[gd_scene load_steps=14 format=3 uid="uid://dju4h517kj54d"]

[ext_resource type="PackedScene" uid="uid://bsp0128sfi5lg" path="res://scenes/wall.tscn" id="1_e8wku"]
[ext_resource type="Shader" path="res://shader/new_shader.gdshader" id="1_x0psg"]
[ext_resource type="Script" path="res://scripts/main.gd" id="2_8w4nk"]
[ext_resource type="PackedScene" uid="uid://csloe4yhdd1c" path="res://scenes/goal.tscn" id="2_466c4"]
[ext_resource type="Script" path="res://scripts/center_line.gd" id="3_sr750"]
[ext_resource type="PackedScene" uid="uid://b0vphqis5146h" path="res://scenes/ball.tscn" id="4_qevjt"]
[ext_resource type="PackedScene" uid="uid://bqkm02uo1jyqh" path="res://scenes/paddle.tscn" id="6_bl2qp"]
[ext_resource type="PackedScene" uid="uid://bhn2ejhh8jrl7" path="res://scenes/hud.tscn" id="8_dhkg7"]
[ext_resource type="AudioStream" uid="uid://cj24ldfric2kq" path="res://assets/sounds/beep-01a.wav" id="9_47hjd"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="9_oy2ur"]
[ext_resource type="Script" path="res://scripts/beep.gd" id="10_leidq"]
[ext_resource type="Script" path="res://scripts/control.gd" id="12_hcal6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awcsm"]
shader = ExtResource("1_x0psg")

[node name="Main" type="Node2D"]
script = ExtResource("2_8w4nk")

[node name="Stage" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="UpperLine" parent="Stage" instance=ExtResource("1_e8wku")]
metadata/_edit_lock_ = true

[node name="LowerLine" parent="Stage" instance=ExtResource("1_e8wku")]
position = Vector2(2.08165e-12, 900)
scale = Vector2(1, -1)
metadata/_edit_lock_ = true

[node name="LeftGoal" parent="Stage" groups=["left_goal"] instance=ExtResource("2_466c4")]

[node name="RightGoal" parent="Stage" instance=ExtResource("2_466c4")]
position = Vector2(1200, 450)
rotation = -1.5708

[node name="CenterLine" type="Node2D" parent="Stage"]
position = Vector2(600, 2.08165e-12)
script = ExtResource("3_sr750")

[node name="Ball" parent="." instance=ExtResource("4_qevjt")]
position = Vector2(600, 450)
metadata/_edit_lock_ = true

[node name="LeftPaddle" parent="." groups=["left_paddle"] instance=ExtResource("6_bl2qp")]
modulate = Color(0, 1, 0, 1)
position = Vector2(76, 447)

[node name="LeftPaddle2" parent="." groups=["left_paddle"] instance=ExtResource("6_bl2qp")]
modulate = Color(0, 1, 0, 1)
position = Vector2(500, 447)

[node name="RightPaddle" parent="." instance=ExtResource("6_bl2qp")]
modulate = Color(1, 0, 1, 1)
position = Vector2(1124, 450)
player_id = 1

[node name="RightPaddle2" parent="." instance=ExtResource("6_bl2qp")]
modulate = Color(1, 0, 1, 1)
position = Vector2(700, 450)
player_id = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_awcsm")
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
offset_right = 1200.0
offset_bottom = 900.0

[node name="HUD" parent="." instance=ExtResource("8_dhkg7")]
script = ExtResource("9_oy2ur")

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_47hjd")
script = ExtResource("10_leidq")

[node name="FullScreenButton" type="TextureButton" parent="."]
offset_right = 1200.0
offset_bottom = 64.0

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_hcal6")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 400.0
offset_right = 294.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 35
text = "console
"
